# internal/api/server/server.go
@@ -55,6 +55,7 @@ func newApp(cfg external.Config) *echo.Echo {
 	orderV1Group := app.Group("/v1/orders")
 	orderV1Group.GET("", orderHandler.GetAll)
 	orderV1Group.GET("/:orderID/payment/status", orderHandler.GetOrderPaymentStatus)
+	orderV1Group.PUT("/:orderID/payment/status", orderHandler.UpdateOrderPaymentStatus)
 	orderV1Group.POST("/checkout", orderHandler.Checkout)
 
 	return app
